2001-02-23  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_rotate_backups): Remove.
	  (xst_backup_file): Implement.
	  (xst_create_path): Implement.
	  (xst_create_path_for_file): Implement from old xst_create_path.
	  (xst_open_write_from_names): Use xst_backup_file.
	  (xst_open_filter_write_from_names): Use xst_backup_file. Use new
	  filter source (in private tmp directory).

	* time-conf.in (write_localtime): Use xst_create_path_for_file.

2001-02-23  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_replace_image): We are #XstPartitionType aware.
	(xst_boot_parse_images): We too!
	(xst_boot_conf_del_images): Taught deleting images.
	(xst_boot_conf_set_images): Use copy of data, not data itself, call del_images.
	(xst_boot_conf_replace_image): Made image matching stronger.

2001-02-22  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in (xst_network_get_pap_passwd): get the pap password from a pap-secrets file.
	  The tag name for dialing dialers passwords is now password, not passwd.
	* parse.pl.in: don't use @_ to pass arguments: it's difficult to know the required args
	  for the function. xst_parse_sh now unquotes the value.
	* replace.pl.in (xst_replace_sh): quote value and surround by quotes if required, before replacing.
	
2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan_recurse) (xst_xml_scan_make_kid_array):
	  Allow [0-9] in tag names.

2001-02-22  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_set): Added some more known tags.

2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in (xst_report): Re-enable report printing. It works.

	* shares-conf.in (xml_print): Move to xst_xml_quote ().

2001-02-22  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_replace_image): Now we can delete image tags too.

2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_quote): Put old code back in, since Chema's
	  didn't work.
